--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
-  "name": "site-creation-w01",
+  "name": "site-creation",
   "version": "1.0.0",
   "description": "W01 Assignment: Site Creation (Express + EJS)",
   "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "dev": "node --watch server.js"
-  },
+  "scripts": { "start": "node server.js" },
   "engines": { "node": ">=18" },
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "express-ejs-layouts": "^2.5.1",
-    "helmet": "^7.1.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "helmet": "^7.1.0"
   }
 }
