--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "1.0.0",
   "description": "W01 Assignment: Site Creation (Express + EJS)",
   "main": "server.js",
-  "scripts": { "start": "node server.js" },
-  "engines": { "node": ">=18" },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "engines": {
+    "node": ">=18"
+  },
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "morgan": "^1.10.0",
-    "helmet": "^7.1.0"
+    "express-ejs-layouts": "^2.5.1",
+    "helmet": "^7.1.0",
+    "morgan": "^1.10.0"
   }
 }
