--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node": ">=18"
   },
   "dependencies": {
+    "dotenv": "^17.2.2",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-ejs-layouts": "^2.5.1",
