--- a/.env
+++ b/.env
@@ -1,4 +1,11 @@
+# App
 PORT=3000
 SESSION_SECRET=dev_secret_only
-DATABASE_URL=postgres://postgres:yourpassword@localhost:5432/csemotors
 
+# PostgreSQL (Render)
+PGHOST=dpg-d34sql33fgac73avil60-a.oregon-postgres.render.com
+PGPORT=5432
+PGDATABASE=site_creation_db
+PGUSER=site_creation_db_user
+PGPASSWORD=NewPassword123
+PGSSLMODE=require
