--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server.js"
   },
   "engines": {
-    "node": ">=18"
+    "node": "20.x"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
@@ -29,3 +29,4 @@
     "nodemon": "^3.1.0"
   }
 }
+
