--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
-# App
+
+# ---------- App ----------
+NODE_ENV=development
 PORT=3000
-SESSION_SECRET=dev_secret_only
 
-# PostgreSQL (Render)
-PGHOST=dpg-d34sql33fgac73avil60-a.oregon-postgres.render.com
-PGPORT=5432
-PGDATABASE=site_creation_db
-PGUSER=site_creation_db_user
-PGPASSWORD=NewPassword123
-PGSSLMODE=require
+# ---------- Database ----------
+# Use the EXACT External Database URL from your Render Postgres.
+# It already includes the correct host/port/db and an URL-encoded password.
+# Example format (replace PASSWORD_HERE with your actual encoded password):
+# postgresql://site_creation_db_user:PASSWORD_HERE@dpg-d34sql33fgac73avil60-a.oregon-postgres.render.com:5432/site_creation_db?sslmode=require
+DATABASE_URL=postgresql://site_creation_db_user:zw6ABJFc65XqoBqhdZNTJ77SUhTCsLDh@dpg-d34sql33fgac73avil60-a.oregon-postgres.render.com:5432/site_creation_db?sslmode=require
 
-# JWT (for Account Management)
-JWT_SECRET=superSecretKeyChangeThis
+# ---------- Auth (JWT) ----------
+JWT_SECRET=mySuperSecret123
 JWT_EXPIRES=1h
