--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ PORT=3000
 # It already includes the correct host/port/db and an URL-encoded password.
 # Example format (replace PASSWORD_HERE with your actual encoded password):
 # postgresql://site_creation_db_user:PASSWORD_HERE@dpg-d34sql33fgac73avil60-a.oregon-postgres.render.com:5432/site_creation_db?sslmode=require
-DATABASE_URL=postgresql://site_creation_db_user:NewPassword123@dpg-d34sql33fgac73avil60-a.oregon-postgres.render.com:5432/site_creation_db?sslmode=require
+DATABASE_URL=postgresql://site_creation_db_user:zw6ABJFc65XqoBqhdZNTJ77SUhTCsLDh@dpg-d34sql33fgac73avil60-a.oregon-postgres.render.com/site_creation_db
 
 # ---------- Auth (JWT) ----------
 JWT_SECRET=mySuperSecret123
